adding adminer to docker-compose

--- a/docker/Makefile
+++ b/docker/Makefile
@@ -1,4 +1,8 @@
 java-light:
 	docker-compose -f docker-compose-java-light.yml up -d
+java-light-down:
+		docker-compose -f docker-compose-java-light.yml down
 php:
 	docker-compose -f docker-compose-php.yml up -d
+php-down:
+	docker-compose -f docker-compose-php.yml down
