docker-compose management

--- a/docker/Makefile
+++ b/docker/Makefile
@@ -1,8 +1,8 @@
-java-light:
-	docker-compose -f docker-compose-java-light.yml up -d
-java-light-down:
-		docker-compose -f docker-compose-java-light.yml down
-php:
-	docker-compose -f docker-compose-php.yml up -d
-php-down:
-	docker-compose -f docker-compose-php.yml down
+databases-up:
+	docker-compose -f databases.yml up -d
+databases-down:
+	docker-compose -f databases.yml down
+prestashop-up:
+	docker-compose -f prestashop.yml up -d
+prestashop-down:
+	docker-compose -f prestashop.yml down
