--- a/docker/Makefile
+++ b/docker/Makefile
@@ -1,8 +1,8 @@
 databases-up:
-	sudo docker-compose -f databases.yml up -d
+	docker-compose -f databases.yml up -d
 databases-down:
-	sudo docker-compose -f databases.yml down
+	docker-compose -f databases.yml down
 prestashop-up:
-	sudo docker-compose -f prestashop.yml up -d
+	docker-compose -f prestashop.yml up -d
 prestashop-down:
-	sudo docker-compose -f prestashop.yml down
+	docker-compose -f prestashop.yml down
