--- a/docker/prestashop.yml
+++ b/docker/prestashop.yml
@@ -5,19 +5,19 @@ services:
     container_name: prestashop
     restart: always
     volumes:
-      - ~/NetBeansProjects/PHP/prestashop:/var/www/html
+      - /var/www/html/prestashop:/var/www/html
     environment:
       - PS_DEV_MODE=false
       - PS_INSTALL_AUTO=0
-      - DB_SERVER=local-mysql
+      - DB_SERVER=mysql
     ports:
       - "8282:80"
     depends_on:
-      - local-mysql
+      - mysql
     networks:
       - local-net
 
-  local-mysql:
+  mysql:
     image: mysql:5.7
     container_name: mysql
     restart: always
@@ -30,26 +30,26 @@ services:
     volumes:
       - ~/storage/docker/mysql:/var/lib/mysql
 
-  adminer:
-    image: adminer
-    restart: always
-    ports:
-      - 8383:8080
-    networks:
-     - local-net
+#  adminer:
+#    image: adminer
+#    restart: always
+#    ports:
+#      - 8383:8080
+#    networks:
+#     - local-net
 
-  phpmyadmin:
-    image: phpmyadmin/phpmyadmin:latest
-    container_name: phpmyadmin
-    restart: always
-    ports:
-     - "8081:80"
-    volumes:
-     - /sessions
-    environment:
-     - PMA_HOST=local-mysql
-    networks:
-     - local-net
+#  phpmyadmin:
+#    image: phpmyadmin/phpmyadmin:latest
+#    container_name: phpmyadmin
+#    restart: always
+#    ports:
+#     - "8081:80"
+#    volumes:
+#     - /sessions
+#    environment:
+#     - PMA_HOST=local-mysql
+#    networks:
+#     - local-net
 
 networks:
     local-net:
