docker compose config

--- a/docker/Makefile
+++ b/docker/Makefile
@@ -1,8 +1,23 @@
 databases-up:
-	docker-compose -f databases.yml up -d
+	docker-compose -f databases.yml up -d --remove-orphans
+
 databases-down:
 	docker-compose -f databases.yml down
+
+databases-logs:
+	docker-compose -f databases.yml logs -f
+
+databases-ps:
+	docker-compose -f databases.yml ps
+
 prestashop-up:
-	docker-compose -f prestashop.yml up -d
+	docker-compose -f prestashop.yml up -d --remove-orphans
+
 prestashop-down:
 	docker-compose -f prestashop.yml down
+
+prestashop-logs:
+	docker-compose -f prestashop.yml logs -f
+
+prestashop-ps:
+	docker-compose -f prestashop.yml ps
