--- a/docker/api.env
+++ b/docker/api.env
@@ -1,4 +1,4 @@
-SPRING_PROFILE=dev
+SPRING_PROFILE=prod
 CONFIG_SERVER_URI=http://kaba-cloud-config:8888
 CONFIG_SERVER_USERNAME=kabacloud
 CONFIG_SERVER_PASSWORD=BatheNafadji!
