upgrade docker-compose

--- a/apache2/sites-available/perform-world.conf
+++ b/apache2/sites-available/perform-world.conf
@@ -1,8 +1,8 @@
 <virtualHost *:80>
-	ServerName dev.perform-world.com
+	ServerName dev.kn-erp.com
 		
-	DocumentRoot /home/kaba/NetBeansProjects/PHP/perform-world
-	<Directory /home/kaba/NetBeansProjects/PHP/perform-world>
+	DocumentRoot /home/kaba/NetBeansProjects/PHP/kn-erp
+	<Directory /home/kaba/NetBeansProjects/PHP/kn-erp>
             Options Indexes FollowSymLinks MultiViews
             AllowOverride All
 	    #Options -Indexes
