--- a/docker/docker-compose-databases.yml
+++ b/docker/docker-compose-databases.yml
@@ -50,6 +50,19 @@ services:
       - 8383:8080
     networks:
       - local-net
+  
+  phpmyadmin:
+    image: phpmyadmin:latest
+    container_name: phpmyadmin
+    restart: always
+    ports:
+      - "8282:80"
+    environment:
+      PMA_HOST: mysql
+      PMA_PORT: 3306
+      PMA_ARBITRARY: 1
+    networks:
+      - local-net
 
   mongo:
     image: mongo:4.4.2
