--- a/docker/docker-compose-databases.yml
+++ b/docker/docker-compose-databases.yml
@@ -17,7 +17,7 @@ services:
       - local-net
 
   mysql:
-    platform: linux/x86_64
+    #platform: linux/x86_64
     image: mysql:5.7
     container_name: mysql
     restart: always
